@@ -592,252 +592,6 @@ class DataTableTest extends BaseTest with Matchers with GherkinParser with Impli
 
   }
 
-  "Data in multi record matrix table (single quoted)" should "be accessible" in {
-
-    val dataTable = DataTable(
-      Tag("""@DataTable(type='matrix')"""), parse(
-      """
-        |Given a multi record matrix table
-        |      |  x  | uno | due | tre |
-        |      | uno |  1  |  2  |  3  |
-        |      | due |  2  |  4  |  6  |
-        |      | tre |  3  |  6  |  9  |
-      """.stripMargin)).asInstanceOf[MatrixTable]
-
-    dataTable.records.size should be (3)
-    dataTable.records.head.size should be (3)
-
-    val table = dataTable.tableScope
-    table.get("vertex.name") should be ("x")
-    table.get("top.name[1]") should be ("uno")
-    table.get("top.name[2]") should be ("due")
-    table.get("top.name[3]") should be ("tre")
-    table.get("left.name[1]") should be ("uno")
-    table.get("left.name[2]") should be ("due")
-    table.get("left.name[3]") should be ("tre")
-    table.get("data[uno][uno]") should be ("1")
-    table.get("data[uno][due]") should be ("2")
-    table.get("data[uno][tre]") should be ("3")
-    table.get("data[due][uno]") should be ("2")
-    table.get("data[due][due]") should be ("4")
-    table.get("data[due][tre]") should be ("6")
-    table.get("data[tre][uno]") should be ("3")
-    table.get("data[tre][due]") should be ("6")
-    table.get("data[tre][tre]") should be ("9")
-    table.findEntries(_ => true).size should be (16)
-
-  }
-
-  "Data in multi record matrix table (double quoted)" should "be accessible" in {
-
-    val dataTable = DataTable(
-      Tag("""@DataTable(type="matrix")"""), parse(
-      """
-        |Given a multi record matrix table
-        |      |  x  | uno | due | tre |
-        |      | uno |  1  |  2  |  3  |
-        |      | due |  2  |  4  |  6  |
-        |      | tre |  3  |  6  |  9  |
-      """.stripMargin)).asInstanceOf[MatrixTable]
-
-    dataTable.records.size should be (3)
-    dataTable.records.head.size should be (3)
-
-    val table = dataTable.tableScope
-    table.get("vertex.name") should be ("x")
-    table.get("top.name[1]") should be ("uno")
-    table.get("top.name[2]") should be ("due")
-    table.get("top.name[3]") should be ("tre")
-    table.get("left.name[1]") should be ("uno")
-    table.get("left.name[2]") should be ("due")
-    table.get("left.name[3]") should be ("tre")
-    table.get("data[uno][uno]") should be ("1")
-    table.get("data[uno][due]") should be ("2")
-    table.get("data[uno][tre]") should be ("3")
-    table.get("data[due][uno]") should be ("2")
-    table.get("data[due][due]") should be ("4")
-    table.get("data[due][tre]") should be ("6")
-    table.get("data[tre][uno]") should be ("3")
-    table.get("data[tre][due]") should be ("6")
-    table.get("data[tre][tre]") should be ("9")
-    table.findEntries(_ => true).size should be (16)
-
-  }
-
-  "Data in single record horizontal matrix table (single quoted)" should "be accessible" in {
-
-    val dataTable = DataTable(
-      Tag("""@DataTable(type='matrix')"""), parse(
-      """
-        |Given a single record horizontal matrix table
-        |      |  x  | uno | due | tre |
-        |      | uno |  1  |  2  |  3  |
-      """.stripMargin)).asInstanceOf[MatrixTable]
-
-    dataTable.records.size should be (1)
-    dataTable.records.head.size should be (3)
-
-    val table = dataTable.tableScope
-    table.get("vertex.name") should be ("x")
-    table.get("top.name[1]") should be ("uno")
-    table.get("top.name[2]") should be ("due")
-    table.get("top.name[3]") should be ("tre")
-    table.get("left.name[1]") should be ("uno")
-    table.get("data[uno][uno]") should be ("1")
-    table.get("data[due][uno]") should be ("2")
-    table.get("data[tre][uno]") should be ("3")
-    table.findEntries(_ => true).size should be (8)
-
-  }
-
-  "Data in single record horizontal matrix table (double quoted)" should "be accessible" in {
-
-    val dataTable = DataTable(
-      Tag("""@DataTable(type="matrix")"""), parse(
-      """
-        |Given a single record horizontal matrix table
-        |      |  x  | uno | due | tre |
-        |      | uno |  1  |  2  |  3  |
-      """.stripMargin)).asInstanceOf[MatrixTable]
-
-    dataTable.records.size should be (1)
-    dataTable.records.head.size should be (3)
-
-    val table = dataTable.tableScope
-    table.get("vertex.name") should be ("x")
-    table.get("top.name[1]") should be ("uno")
-    table.get("top.name[2]") should be ("due")
-    table.get("top.name[3]") should be ("tre")
-    table.get("left.name[1]") should be ("uno")
-    table.get("data[uno][uno]") should be ("1")
-    table.get("data[due][uno]") should be ("2")
-    table.get("data[tre][uno]") should be ("3")
-    table.findEntries(_ => true).size should be (8)
-
-  }
-
-  "Data in single record vertical matrix table (single quoted)" should "be accessible" in {
-
-    val dataTable = DataTable(
-      Tag("""@DataTable(type='matrix')"""), parse(
-      """
-        |Given a single record vertical matrix table
-        |      |  x  | uno |
-        |      | uno |  1  |
-        |      | due |  2  |
-        |      | tre |  3  |
-      """.stripMargin)).asInstanceOf[MatrixTable]
-
-    dataTable.records.size should be (3)
-    dataTable.records.head.size should be (1)
-
-    val table = dataTable.tableScope
-    table.get("vertex.name") should be ("x")
-    table.get("top.name[1]") should be ("uno")
-    table.get("left.name[1]") should be ("uno")
-    table.get("left.name[2]") should be ("due")
-    table.get("left.name[3]") should be ("tre")
-    table.get("data[uno][uno]") should be ("1")
-    table.get("data[uno][due]") should be ("2")
-    table.get("data[uno][tre]") should be ("3")
-    table.findEntries(_ => true).size should be (8)
-
-  }
-
-  "Data in single record vertical matrix table (double quoted)" should "be accessible" in {
-
-    val dataTable = DataTable(
-      Tag("""@DataTable(type="matrix")"""), parse(
-      """
-        |Given a single record vertical matrix table
-        |      |  x  | uno |
-        |      | uno |  1  |
-        |      | due |  2  |
-        |      | tre |  3  |
-      """.stripMargin)).asInstanceOf[MatrixTable]
-
-    dataTable.records.size should be (3)
-    dataTable.records.head.size should be (1)
-
-    val table = dataTable.tableScope
-    table.get("vertex.name") should be ("x")
-    table.get("top.name[1]") should be ("uno")
-    table.get("left.name[1]") should be ("uno")
-    table.get("left.name[2]") should be ("due")
-    table.get("left.name[3]") should be ("tre")
-    table.get("data[uno][uno]") should be ("1")
-    table.get("data[uno][due]") should be ("2")
-    table.get("data[uno][tre]") should be ("3")
-    table.findEntries(_ => true).size should be (8)
-
-  }
-
-  "Data in single item matrix table (single quoted)" should "be accessible" in {
-
-    val dataTable = DataTable(
-      Tag("""@DataTable(type='matrix')"""), parse(
-      """
-        |Given a single item matrix table
-        |      |  x  | uno |
-        |      | uno |  1  |
-      """.stripMargin)).asInstanceOf[MatrixTable]
-
-    dataTable.records.size should be (1)
-    dataTable.records.head.size should be (1)
-
-    val table = dataTable.tableScope
-    table.get("vertex.name") should be ("x")
-    table.get("top.name[1]") should be ("uno")
-    table.get("left.name[1]") should be ("uno")
-    table.get("data[uno][uno]") should be ("1")
-    table.findEntries(_ => true).size should be (4)
-
-  }
-
-  "Data in single item matrix table (double quoted)" should "be accessible" in {
-
-    val dataTable = DataTable(
-      Tag("""@DataTable(type="matrix")"""), parse(
-      """
-        |Given a single item matrix table
-        |      |  x  | uno |
-        |      | uno |  1  |
-      """.stripMargin)).asInstanceOf[MatrixTable]
-
-    dataTable.records.size should be (1)
-    dataTable.records.head.size should be (1)
-
-    val table = dataTable.tableScope
-    table.get("vertex.name") should be ("x")
-    table.get("top.name[1]") should be ("uno")
-    table.get("left.name[1]") should be ("uno")
-    table.get("data[uno][uno]") should be ("1")
-    table.findEntries(_ => true).size should be (4)
-
-  }
-
-  "Zero item matrix table (single quoted)" should "return empty table" in {
-
-    DataTable(
-      Tag("""@DataTable(type='matrix')"""), parse(
-      """
-        |Given a single item matrix table
-        |      |  x  |
-      """.stripMargin)).asInstanceOf[MatrixTable].records.isEmpty should be (true)
-
-  }
-
-  "Zero item matrix table (double quoted)" should "return empty table" in {
-
-    DataTable(
-      Tag("""@DataTable(type="matrix")"""), parse(
-      """
-        |Given a single item matrix table
-        |      |  x  |
-      """.stripMargin)).asInstanceOf[MatrixTable].records.isEmpty should be (true)
-
-  }
-
   "Zero table" should "return empty table (single quoted)" in {
 
     DataTable(Tag("""@DataTable(horizontal='none')"""), parse("Given no table")).asInstanceOf[FlatTable].records.isEmpty should be (true)
@@ -860,7 +614,6 @@ class DataTableTest extends BaseTest with Matchers with GherkinParser with Impli
     checkInvalidTag("""@DataTable(horizontal="a",unknown="b")""")
     checkInvalidTag("""@DataTable(unknown="a")""")
     checkInvalidTag("""@DataTable(horizontal="a",vertical="b")""")
-    checkInvalidTag("""@DataTable(type="matrix",horizontal="a")""")
   }
 
   def checkInvalidTag(tag: String): Unit = {
